--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -17,7 +17,7 @@
 <meta property="og:description" content="blindluke's site - a blog about system administration, monitoring and the way Perl fits into all of this nicely"/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content=""/>
-  <title>blindluke's site</title>
+  <title>blindluke's site &ndash; About me</title>
 </head>
 <body>
   <aside>
@@ -43,45 +43,41 @@
 
 <article>
   <header>
-    <h2><a href="/env-based-templating-tool-pskel.html#env-based-templating-tool-pskel">Env based templating tool - pskel</a></h2>
-    <p>
-      Posted 2015-11-07 in <a href="/category/perl.html">Perl</a>
-    </p>
+    <h1 id="about-me">About me</h1>
   </header>
   <div>
-      <p>Inspired by a nice, minimal templating tool called <a href="https://github.com/silentbicycle/skel">skel</a>, I tried rewriting it in Perl. I kept the basic premise of the tool, which uses the values of your environment variables to fill in the placeholders in a template. But I also wanted to add something of my own - the possibility to provide missing / forgotten values on the fly. It's not much, but it's useful.</p>
-      <a class="btn" href="/env-based-templating-tool-pskel.html#env-based-templating-tool-pskel">Continue reading</a>
+    <h1>What I do @work</h1>
+<ul>
+<li>heavy Linux system administration (mostly RHEL / OEL)</li>
+<li>some UNIX system administration (AIX, Solaris)</li>
+<li>Oracle WebLogic server operations, monitoring, troubleshooting and whatever else comes to mind</li>
+<li>IBM MQ configuration, monitoring, some devel work on the side</li>
+<li>Zabbix configuration, extension and integration with other systems in place</li>
+<li>Perl coding for fun and profit</li>
+</ul>
+<h1>What I do @home</h1>
+<ul>
+<li>heavy Linux system administration (Debian)</li>
+<li>game design, game development (Perl, C, heck, even Java)</li>
+<li>uncontrolled scribbling (Kaweco and Leuchtturm 1917)</li>
+<li>running</li>
+<li>Perl coding for fun</li>
+</ul>
+<h1>What I talk about</h1>
+<ul>
+<li><a href="http://www.slideshare.net/Zabbix/lukasz-lipski-monitoring-payment-queues">"Monitoring Payment Queues"</a> at Zabbix Conference 2015</li>
+<li><a href="http://www.zabbix.com/img/zabconf2014/presentations/Lukasz_Lipski_Nordea_JIRA_Zabbix_Conference_2014.pdf">"Working with JIRA"</a> at Zabbix Conference 2014</li>
+<li><a href="http://www.zabbix.com/img/zabconf2013/presentations/Integrated_Dashboard_Design.pdf">"Integrated Dashboard Design"</a> at Zabbix Conference 2014</li>
+<li><a href="http://act.yapc.eu/plpw2013/talk/4783">"Spewing Sentences"</a> at the Polish Perl Workshop 2013</li>
+<li><a href="http://act.yapc.eu/gpw2013/talk/4525">"Real-time monitoring dashboards with Perl"</a> at the German Perl Workshop 2013</li>
+<li>and some others</li>
+</ul>
   </div>
-  <hr />
 </article>
-<article>
-  <header>
-    <h2><a href="/spewing-sentences.html#spewing-sentences">Spewing Sentences</a></h2>
-    <p>
-      Posted 2013-10-08 in <a href="/category/perl.html">Perl</a>
-    </p>
-  </header>
-  <div>
-      <p>Context-free grammars can be quite useful, especially if they are used to produce corporate-quality incident updates. In other words, Perl makes it very easy to imitate a mindless drone. This is an analysis of the techique and a script that could potentially generate multiple mindless text messages for you, while you are solving real problems. All of this in 15 lines of code, with twice as much grammar. I sincerely hope that no one will need this at work.</p>
-      <a class="btn" href="/spewing-sentences.html#spewing-sentences">Continue reading</a>
-  </div>
-</article>
-
-  <div class="pagination">
-  </div>
 
     <footer>
       <p>&copy; 2015 blindluke</p>
 <p>Built using <a href="http://getpelican.com" target="_blank">Pelican</a> - <a href="https://github.com/alexandrevicenzi/flex" target="_blank">Flex</a> theme by <a href="http://alexandrevicenzi.com" target="_blank">Alexandre Vicenzi</a></p>    </footer>
   </main>
-<script type="application/ld+json">
-{
-  "@context" : "http://schema.org",
-  "@type" : "Blog",
-  "name": " blindluke's site ",
-  "url" : "",
-  "image": "",
-  "description": "blindluke's site - a blog about system administration, monitoring and the way Perl fits into all of this nicely"
-}
-</script></body>
+</body>
 </html>
